--- a/index.html
+++ b/index.html
@@ -28,24 +28,34 @@
             </div>
         </nav>
         <div class="baner">
-            <div class="cartaz">
-                <img src="./arquivos/cartaz.png" alt="">
-            </div>
             <div class="chamada">
-                <p></p>
                 <h1>ALAVANQUE<br> SUA EMPRESA</h1>
                 <p>Potencialize o sucesso do seu negócio com a expertise da nossa agência de marketing digital. Conquistar visibilidade online, engajar seu público-alvo e aumentar suas vendas nunca foi tão simples. Descubra como nossa equipe de especialistas pode transformar sua presença digital. Junte-se a nós e leve sua marca ao próximo nível.</p>
-                    <button>Vamos começar!</button>
+                <button>Vamos começar!</button>
+                <div class="cartaz">
+                    <img src="./arquivos/cartaz.png" alt="">
+                </div>
             </div>
         </div>
     </header>
-    <main>
-        <h2>teste</h2>
-        <hr>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae eveniet soluta sit ab ut esse ducimus facere delectus sed expedita corrupti atque quo impedit itaque exercitationem, ex maiores in officia!<br>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est dolorum ratione eos, fugiat blanditiis labore itaque molestiae ducimus nobis expedita corrupti atque voluptates similique ex provident iusto sed veniam dolor!<br>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem ipsam necessitatibus nihil? Possimus dolore harum ratione odit fugit animi dolorum, molestiae, in vel rem voluptate aspernatur, distinctio repudiandae veritatis quisquam.</p>
-    </main>
+    <!-- <main>
+        <section>
+            <div class="cards">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </section>
+        <section>
+            <div class="chamada"></div>
+            <div class="cartaz">
+                <img src="./arquivos/cartaz2.png" alt="">
+            </div>
+        </section>
+    </main> -->
     <footer>
 
     </footer>
