envio dos arquivos

--- a/index.html
+++ b/index.html
@@ -6,58 +6,177 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital evolution</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./arquivos/365008870_312723084503104_3016384612425854484_n.jpg" type="image/x-icon">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="logo">
-                <h2>Digital evolution</h2>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li>Home</li>
-                    <li>Contato</li>
-                    <li>Sobre nós</li>
-                    <li>Serviços</li>
-                    <li><a href="./pages/loguin.html"><button>Entrar</button></a></li>
-                </ul>
-            </div>
-        </nav>
+    <nav>
+        <div class="logo">
+            <h2>Digital evolution</h2>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#home"></a>Home</li>
+                <li>Contato</li>
+                <li><a href="#section2">Sobre nós</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="./pages/loguin.html"><button>Entrar</button></a></li>
+            </ul>
+        </div>
+        <div class="menus">
+            <img style="scale: 1.5;" src="./arquivos/menu_FILL0_wght400_GRAD0_opsz24.png" alt="">
+        </div>
+    </nav>
+    <header id="home">
         <div class="baner">
             <div class="chamada">
                 <h1>ALAVANQUE<br> SUA EMPRESA</h1>
-                <p>Potencialize o sucesso do seu negócio com a expertise da nossa agência de marketing digital. Conquistar visibilidade online, engajar seu público-alvo e aumentar suas vendas nunca foi tão simples. Descubra como nossa equipe de especialistas pode transformar sua presença digital. Junte-se a nós e leve sua marca ao próximo nível.</p>
-                <button>Vamos começar!</button>
-                <div class="cartaz">
-                    <img src="./arquivos/cartaz.png" alt="">
-                </div>
+                <p>Potencialize o sucesso do seu negócio com a expertise da nossa agência de marketing digital.
+                    Conquistar visibilidade online, engajar seu público-alvo e aumentar suas vendas nunca foi tão
+                    simples. Descubra como nossa equipe de especialistas pode transformar sua presença digital. Junte-se
+                    a nós e leve sua marca ao próximo nível.</p>
+                <a href=""><button>Vamos começar!</button></a>
+            </div>
+            <div class="cartaz">
+                <img src="./arquivos/cartaz.png" alt="">
             </div>
         </div>
     </header>
-    <!-- <main>
+    <main>
+        <marquee behavior="scrol" direction="left">
+            <p>slldnnckjsjndc ebhdc dhfd cdh cjfvv erce cec ec eche cje cej c</p>
+        </marquee>
+        <h4 id="nossos">CONHEÇA NOSSOS SERVIÇOS</h4>
         <section>
-            <div class="cards">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+           
+            <div class="cards" id="servicos">
+                <div class="card">
+                    <div class="card_header">
+                         <div class="icons" id="conteudo"></div>
+                        <h4>Marketing de Conteudo</h4>
+                    </div>
+                    <p>Uma forma de engajar com seu público-alvo, através da criação de conteúdo relevante e valioso,
+                        atraindo, envolvendo e gerando valor</p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Preciso+de+ajuda+com+o+Marketing+de+Conte%C3%BAdo.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                </div>
+                <div class="card">
+                    <div class="card_header">
+                        <div class="icons" id="sites"></div>
+                        <h4>Marketing Sites</h4>
+                    </div>
+                    <p>Crie um hub central de informações, transformando visitantes em clientes.</p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+melhorar+meu+site+para+atrair+mais+clientes.&type=phone_number&app_absent=0"target="_blank"><button>Saiba mais</button></a>
+                </div>
+                <div class="card">
+                    <div class="card_header">
+                        <div class="icons" id="local"></div>
+                        <h4>Marketing Local</h4>
+                    </div>
+                    <p>Estabeleça raízes na sua comunidade, atraindo clientes locais. </p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                </div>
+                <div class="card">
+                    <div class="card_header">
+                        <div class="icons" id="email"></div>
+                        <h4>Email Marketing</h4>
+                    </div>
+                    <p>O email marketing mantém seu público envolvido e informado. </p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+utilizar+o+Email+Marketing+de+forma+eficaz.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                </div>
+                <div class="card">
+                    <div class="card_header">
+                        <div class="icons" id="redes"></div>
+                        <h4>Redes Sociais</h4>
+                    </div>
+                    <p>Alcance um público global, construindo reconhecimento de marca e engajamento constante. </p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+impulsionar+minhas+redes+sociais.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                </div>
+                <div class="card">
+                    <div class="card_header">
+                        <div class="icons" id="google"></div>
+                        <h4>Atualização do Googe meu negócio</h4>
+                    </div>
+                    <p>Mantenha-se facilmente acessível para os clientes locais que pesquisam sua empresa ou os
+                        produtos e serviços que você oferece.</p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+atualizar+meu+perfil+no+Google+Meu+Neg%C3%B3cio.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                </div>
             </div>
         </section>
-        <section>
-            <div class="chamada"></div>
+        <section  id="section2">
+            <div class="chamada">
+                <h1>Parcerias que impulsionam seu negócio.</h1>
+                <p>Somos uma empresa de Marketing Digital comprometida com o sucesso de nossos clientes. Oferecemos
+                    soluções inovadoras e criativas para decolar seus negócios. Buscamos resultados mensuráveis e
+                    excelência para impulsionar sua marca no mercado. Nossa missão é ser parceiros de confiança,
+                    ajudando você a alcançar o sucesso em suas jornadas digitais.</p>
+                <a href=""><button id="button2">Fazer uma parceria</button></a>
+            </div>
             <div class="cartaz">
                 <img src="./arquivos/cartaz2.png" alt="">
             </div>
-        </section>
-    </main> -->
-    <footer>
 
+        </section>
+        <section>
+            <div class="chamada">
+                <h1>Como a <span>DIGITAL EVOLUTION</span> pode aumentar minhas vendas?</h1>
+                <p>
+                    Você sabe quais são as principais fontes de influência que levam as pessoas a visitar o seu site e o
+                    seu comércio? Nós da Digital Evolution temos a resposta. Veja neste gráfico como nossos serviços de
+                    marketing digital podem impactar positivamente os seus clientes e aumentar as suas vendas. Confira
+                    as porcentagens das principais categorias que fazem a diferença na hora de escolher o seu negócio.
+                </p>
+            </div>
+            <div class="cartaz">
+                <img src="./arquivos/10.png" alt="">
+            </div>
+
+        </section>
+        <section id="section4">
+            <div class="chamada">
+                <h1>Marketing para redes sociais</h1>
+                <h3>Destaque seu negócio com nossos serviços exclusivos:</h2>
+                    <ul>
+                        <li>Gerenciamento Profissional de Redes Sociais</li>
+                        <li>Campanhas Estratégicas de Engajamento</li>
+                        <li>Criação de Conteúdo Criativo e Impactante</li>
+                        <li>Anúncios Segmentados para o Público-Alvo</li>
+                    </ul>
+                    <a href=""><button id="button2">Saiba mais</button></a>
+            </div>
+            <div class="cartaz">
+                <br><br>
+                <img src="./arquivos/cartaz_social_midia.png" alt="">
+            </div>
+
+        </section>
+        <section id="section5">
+            <div class="chamada">
+                <h1>Marketing local</h1>
+                <h3>Destaque-se na sua região com nosso serviço especializado de Marketing Local!</h2>
+                    <ul>
+                        <li>Se você é uma loja, conveniência ou empresa local, nossa estratégia visa aumentar sua
+                            visibilidade no mercado regional.</li>
+                        <li>Utilizamos táticas direcionadas para atrair clientes locais, promover suas ofertas e
+                            impulsionar o tráfego em sua loja.</li>
+                        <li>Com nosso Marketing Local, você alcançará resultados tangíveis, conquistando sua comunidade
+                            e se tornando a escolha preferida dos clientes locais.</li>
+                        <li>Potencialize seus negócios e se destaque no cenário regional com nosso Marketing Local
+                            personalizado!</li>
+                    </ul>
+                    <a href=""><button id="button2">Saiba mais</button></a>
+            </div>
+            <div class="cartaz">
+                <br><br>
+                <img src="./arquivos/marketing_local.png" alt="imagem representando o Marketing Local">
+            </div>
+
+        </section>
+    </main>
+    <footer>
+        2023 © Digital Evolution. Todos os direitos reservados.
     </footer>
 
 </body>
