envio dos arquivis

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <header id="home">
         <div class="baner">
-            <div class="chamada">
+            <div class="chamada" id="chamada1">
                 <h1>ALAVANQUE<br> SUA EMPRESA</h1>
                 <p>Potencialize o sucesso do seu negócio com a expertise da nossa agência de marketing digital.
                     Conquistar visibilidade online, engajar seu público-alvo e aumentar suas vendas nunca foi tão
