--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <nav>
         <div class="logo">
+            <img src="./arquivos/365008870_312723084503104_3016384612425854484_n.jpg" alt="">
             <h2>Digital evolution</h2>
         </div>
         <div class="menu">
@@ -38,7 +39,7 @@
                     Conquistar visibilidade online, engajar seu público-alvo e aumentar suas vendas nunca foi tão
                     simples. Descubra como nossa equipe de especialistas pode transformar sua presença digital. Junte-se
                     a nós e leve sua marca ao próximo nível.</p>
-                <a href=""><button>Vamos começar!</button></a>
+                <a href="https://wa.me/556381120245"><button>Vamos começar!</button></a>
             </div>
             <div class="cartaz">
                 <img src="./arquivos/cartaz.png" alt="">
@@ -47,7 +48,7 @@
     </header>
     <main>
         <marquee behavior="scrol" direction="left">
-            <p>slldnnckjsjndc ebhdc dhfd cdh cjfvv erce cec ec eche cje cej c</p>
+            <p>A logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo  logotipo  logotipo  logotipo logotipo logotipo logotipo logotipo logotipo Z</p>
         </marquee>
         <h4 id="nossos">CONHEÇA NOSSOS SERVIÇOS</h4>
         <section>
@@ -112,7 +113,7 @@
                     soluções inovadoras e criativas para decolar seus negócios. Buscamos resultados mensuráveis e
                     excelência para impulsionar sua marca no mercado. Nossa missão é ser parceiros de confiança,
                     ajudando você a alcançar o sucesso em suas jornadas digitais.</p>
-                <a href=""><button id="button2">Fazer uma parceria</button></a>
+                <a href="https://wa.me/556381120245"><button id="button2">Fazer uma parceria</button></a>
             </div>
             <div class="cartaz">
                 <img src="./arquivos/cartaz2.png" alt="">
@@ -144,7 +145,7 @@
                         <li>Criação de Conteúdo Criativo e Impactante</li>
                         <li>Anúncios Segmentados para o Público-Alvo</li>
                     </ul>
-                    <a href=""><button id="button2">Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+impulsionar+minhas+redes+sociais.&type=phone_number&app_absent=0"><button id="button2">Saiba mais</button></a>
             </div>
             <div class="cartaz">
                 <br><br>
@@ -166,7 +167,7 @@
                         <li>Potencialize seus negócios e se destaque no cenário regional com nosso Marketing Local
                             personalizado!</li>
                     </ul>
-                    <a href=""><button id="button2">Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente.&type=phone_number&app_absent=0"><button id="button2">Saiba mais</button></a>
             </div>
             <div class="cartaz">
                 <br><br>
