--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>Contato</li>
                 <li><a href="#section2">Sobre nós</a></li>
                 <li><a href="#servicos">Serviços</a></li>
-                <li><a href="./pages/loguin.html"><button>Entrar</button></a></li>
+                <li><a href=""><button>Entrar</button></a></li>
             </ul>
         </div>
         <div class="menus">
