--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                 </div>
                 <div class="card">
                     <div class="card_header">
-                        <div class="icons" id="email"></div>
-                        <h4>Email Marketing</h4>
+                        <div class="icons" id="criacao"></div>
+                        <h4>Criação de Site</h4>
                     </div>
-                    <p>O email marketing mantém seu público envolvido e informado. </p>
+                    <p>Amplie seu alcance de mercado, a sua credibilidade e facilite a interação com clientes, contribuindo para o crescimento do seu negócio.</p>
                     <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+utilizar+o+Email+Marketing+de+forma+eficaz.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
