--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <h4>Criação de Site</h4>
                     </div>
                     <p>Amplie seu alcance de mercado, a sua credibilidade e facilite a interação com clientes, contribuindo para o crescimento do seu negócio.</p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+utilizar+o+Email+Marketing+de+forma+eficaz.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+criar+um+site+para+a+minha+empresa+e+ganhar+uma+melhor+credibilidade+entre+outros+benefícios.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
                     <div class="card_header">
@@ -113,7 +113,7 @@
                     soluções inovadoras e criativas para decolar seus negócios. Buscamos resultados mensuráveis e
                     excelência para impulsionar sua marca no mercado. Nossa missão é ser parceiros de confiança,
                     ajudando você a alcançar o sucesso em suas jornadas digitais.</p>
-                <a href="https://wa.me/556381120245"><button id="button2">Fazer uma parceria</button></a>
+                <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+fechar+uma+parceria+para+impulsionar+meu+Neg%C3%B3cio.&type=phone_number&app_absent=0"><button id="button2">Fazer uma parceria</button></a>
             </div>
             <div class="cartaz">
                 <img src="./arquivos/cartaz2.png" alt="">
@@ -167,7 +167,7 @@
                         <li>Potencialize seus negócios e se destaque no cenário regional com nosso Marketing Local
                             personalizado!</li>
                     </ul>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente.&type=phone_number&app_absent=0"><button id="button2">Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente+com+o+marketing+local.&type=phone_number&app_absent=0"><button id="button2">Saiba mais</button></a>
             </div>
             <div class="cartaz">
                 <br><br>
