--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
         </div>
     </header>
     <main>
-        <marquee behavior="scrol" direction="left">
+        <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0"><img src="./arquivos/WhatsApp.svg.webp" alt="" id="whats"></a>
+        <marquee behavior="scrol" direction="left" id="servicos">
             <p>A logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo  logotipo  logotipo  logotipo logotipo logotipo logotipo logotipo logotipo Z</p>
         </marquee>
-        <h4 id="nossos">CONHEÇA NOSSOS SERVIÇOS</h4>
-        <section>
+        <h4 class="nossos" >CONHEÇA NOSSOS SERVIÇOS</h4>
+        <section >
            
-            <div class="cards" id="servicos">
+            <div class="cards" >
                 <div class="card">
                     <div class="card_header">
                          <div class="icons" id="conteudo"></div>
