--- a/index.html
+++ b/index.html
@@ -47,22 +47,27 @@
         </div>
     </header>
     <main>
-        <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0"><img src="./arquivos/WhatsApp.svg.webp" alt="" id="whats"></a>
+        <a
+            href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0"><img
+                src="./arquivos/WhatsApp.svg.webp" alt="" id="whats"></a>
         <marquee behavior="scrol" direction="left" id="servicos">
-            <p>A logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo  logotipo  logotipo  logotipo logotipo logotipo logotipo logotipo logotipo Z</p>
+            <p>A logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo
+                logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo
+                logotipo logotipo logotipo Z</p>
         </marquee>
-        <h4 class="nossos" >CONHEÇA NOSSOS SERVIÇOS</h4>
-        <section >
-           
-            <div class="cards" >
+        <h4 class="nossos">CONHEÇA NOSSOS SERVIÇOS</h4>
+        <section>
+
+            <div class="cards">
                 <div class="card">
                     <div class="card_header">
-                         <div class="icons" id="conteudo"></div>
+                        <div class="icons" id="conteudo"></div>
                         <h4>Marketing de Conteudo</h4>
                     </div>
                     <p>Uma forma de engajar com seu público-alvo, através da criação de conteúdo relevante e valioso,
                         atraindo, envolvendo e gerando valor</p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Preciso+de+ajuda+com+o+Marketing+de+Conte%C3%BAdo.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Preciso+de+ajuda+com+o+Marketing+de+Conte%C3%BAdo.&type=phone_number&app_absent=0"
+                        target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
                     <div class="card_header">
@@ -70,7 +75,8 @@
                         <h4>Marketing Sites</h4>
                     </div>
                     <p>Crie um hub central de informações, transformando visitantes em clientes.</p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+melhorar+meu+site+para+atrair+mais+clientes.&type=phone_number&app_absent=0"target="_blank"><button>Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+melhorar+meu+site+para+atrair+mais+clientes.&type=phone_number&app_absent=0"
+                        target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
                     <div class="card_header">
@@ -78,15 +84,18 @@
                         <h4>Marketing Local</h4>
                     </div>
                     <p>Estabeleça raízes na sua comunidade, atraindo clientes locais. </p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente.&type=phone_number&app_absent=0"
+                        target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
                     <div class="card_header">
                         <div class="icons" id="criacao"></div>
                         <h4>Criação de Site</h4>
                     </div>
-                    <p>Amplie seu alcance de mercado, a sua credibilidade e facilite a interação com clientes, contribuindo para o crescimento do seu negócio.</p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+criar+um+site+para+a+minha+empresa+e+ganhar+uma+melhor+credibilidade+entre+outros+benefícios.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                    <p>Amplie seu alcance de mercado, a sua credibilidade e facilite a interação com clientes,
+                        contribuindo para o crescimento do seu negócio.</p>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+criar+um+site+para+a+minha+empresa+e+ganhar+uma+melhor+credibilidade+entre+outros+benefícios.&type=phone_number&app_absent=0"
+                        target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
                     <div class="card_header">
@@ -94,7 +103,8 @@
                         <h4>Redes Sociais</h4>
                     </div>
                     <p>Alcance um público global, construindo reconhecimento de marca e engajamento constante. </p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+impulsionar+minhas+redes+sociais.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+impulsionar+minhas+redes+sociais.&type=phone_number&app_absent=0"
+                        target="_blank"><button>Saiba mais</button></a>
                 </div>
                 <div class="card">
                     <div class="card_header">
@@ -103,18 +113,21 @@
                     </div>
                     <p>Mantenha-se facilmente acessível para os clientes locais que pesquisam sua empresa ou os
                         produtos e serviços que você oferece.</p>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+atualizar+meu+perfil+no+Google+Meu+Neg%C3%B3cio.&type=phone_number&app_absent=0" target="_blank"><button>Saiba mais</button></a>
+                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+atualizar+meu+perfil+no+Google+Meu+Neg%C3%B3cio.&type=phone_number&app_absent=0"
+                        target="_blank"><button>Saiba mais</button></a>
                 </div>
             </div>
         </section>
-        <section  id="section2">
+        <section id="section2">
             <div class="chamada">
                 <h1>Parcerias que impulsionam seu negócio.</h1>
                 <p>Somos uma empresa de Marketing Digital comprometida com o sucesso de nossos clientes. Oferecemos
                     soluções inovadoras e criativas para decolar seus negócios. Buscamos resultados mensuráveis e
                     excelência para impulsionar sua marca no mercado. Nossa missão é ser parceiros de confiança,
                     ajudando você a alcançar o sucesso em suas jornadas digitais.</p>
-                <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+fechar+uma+parceria+para+impulsionar+meu+Neg%C3%B3cio.&type=phone_number&app_absent=0"><button id="button2">Fazer uma parceria</button></a>
+                <a
+                    href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+fechar+uma+parceria+para+impulsionar+meu+Neg%C3%B3cio.&type=phone_number&app_absent=0"><button
+                        id="button2">Fazer uma parceria</button></a>
             </div>
             <div class="cartaz">
                 <img src="./arquivos/cartaz2.png" alt="">
@@ -146,7 +159,9 @@
                         <li>Criação de Conteúdo Criativo e Impactante</li>
                         <li>Anúncios Segmentados para o Público-Alvo</li>
                     </ul>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+impulsionar+minhas+redes+sociais.&type=phone_number&app_absent=0"><button id="button2">Saiba mais</button></a>
+                    <a
+                        href="https://api.whatsapp.com/send/?phone=5563981120245&text=Quero+impulsionar+minhas+redes+sociais.&type=phone_number&app_absent=0"><button
+                            id="button2">Saiba mais</button></a>
             </div>
             <div class="cartaz">
                 <br><br>
@@ -168,13 +183,34 @@
                         <li>Potencialize seus negócios e se destaque no cenário regional com nosso Marketing Local
                             personalizado!</li>
                     </ul>
-                    <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente+com+o+marketing+local.&type=phone_number&app_absent=0"><button id="button2">Saiba mais</button></a>
+                    <a
+                        href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+impulsionar+meu+neg%C3%B3cio+localmente+com+o+marketing+local.&type=phone_number&app_absent=0"><button
+                            id="button2">Saiba mais</button></a>
             </div>
             <div class="cartaz">
                 <br><br>
                 <img src="./arquivos/marketing_local.png" alt="imagem representando o Marketing Local">
             </div>
 
+        </section>
+        <section>
+            <div class="contato">
+                <a href="">
+                    <div class="telefone">
+                        <img src="" alt="">
+                    </div>
+                </a>
+                <a href="">
+                    <div class="email">
+                        <img src="" alt="">
+                    </div>
+                </a>
+                <a href="">
+                    <div class="instagram">
+                        <img src="" alt="">
+                    </div>
+                </a>
+            </div>
         </section>
     </main>
     <footer>
