--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="./arquivos/365008870_312723084503104_3016384612425854484_n.jpg" type="image/x-icon">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src=""></script>
 
 </head>
 
@@ -27,7 +28,7 @@
                 <li><a href=""><button>Entrar</button></a></li>
             </ul>
         </div>
-        <div class="menus">
+        <div class="menus" onclick="menu()">
             <img style="scale: 1.5;" src="./arquivos/menu_FILL0_wght400_GRAD0_opsz24.png" alt="">
         </div>
     </nav>
@@ -47,9 +48,13 @@
         </div>
     </header>
     <main>
-        <a
-            href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0"><img
-                src="./arquivos/WhatsApp.svg.webp" alt="" id="whats"></a>
+        <div class="ateendente">
+            <a href="https://api.whatsapp.com/send/?phone=5563981120245&text=Gostaria+de+saber+mais+sobtre+a+Digital+Evolution+e+como+ela+pode+contribuir+para+a+minha+empresa.&type=phone_number&app_absent=0">
+                <p id="description_w">Converse com um atendente</p>
+                <img src="./arquivos/WhatsApp.svg.webp" alt="" id="whats">
+          </a>
+        </div>
+        
         <marquee behavior="scrol" direction="left" id="servicos">
             <p>A logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo
                 logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo logotipo
