--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
         </div>
 
-        <marquee behavior="scroll" direction="left" id="servicos" loop="-1" scrollamount="20" >
+        <marquee behavior="scroll" direction="left" id="servicos" loop="-1"  >
             <!-- <div class="logos_clientes"> -->
                 <img src="./arquivos/logos/1.png" alt="">
                 <img src="./arquivos/logos/2.png" alt="">
