--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="./arquivos/WhatsApp.svg.webp" alt="" id="whats">
             </a>
         </div>
-
+        <h4 class="nossos">NOSSOS CLIENTES</h4>
         <marquee behavior="scroll" direction="left" id="servicos" loop="-1"  >
             <!-- <div class="logos_clientes"> -->
                 <img src="./arquivos/logos/1.png" alt="">
