--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital evolution</title>
+    <title>Digital Evolution</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./arquivos/fav_icon.jpg" type="image/x-icon">
     <link rel="stylesheet"
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h2>Digital evolution</h2>
+            <h2>Digital Evolution</h2>
         </div>
         <div class="menu">
             <ul>
